@@ -33,6 +33,7 @@ import org.xwiki.cache.CacheException;
 import org.xwiki.cache.CacheManager;
 import org.xwiki.cache.config.LRUCacheConfiguration;
 import org.xwiki.model.reference.DocumentReference;
+import org.xwiki.model.reference.EntityReferenceSerializer;
 import org.xwiki.observation.EventListener;
 import org.xwiki.observation.ObservationManager;
 import org.xwiki.observation.event.Event;
@@ -63,14 +64,12 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
 
     private Cache<Boolean> pageExistCache;
 
-    private int cacheCapacity = 500;
-
-    private int pageExistCacheCapacity = 10000;
-
     /**
      * Used to know if a received event is a local or remote one.
      */
     private RemoteObservationManagerContext remoteObservationManagerContext;
+
+    private EntityReferenceSerializer<String> uidStringEntityReferenceSerializer;
 
     /**
      * Used to register XWikiCacheStore to receive documents events.
@@ -86,6 +85,7 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
         this.remoteObservationManagerContext = Utils.getComponent(RemoteObservationManagerContext.class);
         this.observationManager = Utils.getComponent(ObservationManager.class);
         this.observationManager.addListener(this);
+        this.uidStringEntityReferenceSerializer = Utils.getComponent(EntityReferenceSerializer.TYPE_STRING, "uid");
     }
 
     @Override
@@ -101,45 +101,30 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
             new WikiDeletedEvent());
     }
 
-    public synchronized void initCache(XWikiContext context) throws XWikiException
-    {
-        if ((this.cache == null) || (this.pageExistCache == null)) {
-            try {
-                String capacity = context.getWiki().Param("xwiki.store.cache.capacity");
-                if (capacity != null) {
-                    this.cacheCapacity = Integer.parseInt(capacity);
-                }
-            } catch (Exception e) {
-            }
-            try {
-                String capacity = context.getWiki().Param("xwiki.store.cache.pageexistcapacity");
-                if (capacity != null) {
-                    this.pageExistCacheCapacity = Integer.parseInt(capacity);
-                }
-            } catch (Exception e) {
-            }
-            initCache(this.cacheCapacity, this.pageExistCacheCapacity, context);
-        }
-    }
-
-    @Override
-    public void initCache(int capacity, int pageExistCacheCapacity, XWikiContext context) throws XWikiException
+    public void initCache(XWikiContext context) throws XWikiException
     {
         CacheManager cacheManager = Utils.getComponent(CacheManager.class);
 
         try {
-            Cache<XWikiDocument> pageCache =
-                cacheManager.createNewCache(new LRUCacheConfiguration("xwiki.store.pagecache", capacity));
-            setCache(pageCache);
+            int pageCacheCapacity = (int) context.getWiki().ParamAsLong("xwiki.store.cache.capacity", 500);
+            this.cache =
+                cacheManager.createNewCache(new LRUCacheConfiguration("xwiki.store.pagecache", pageCacheCapacity));
 
-            Cache<Boolean> pageExistcache =
-                cacheManager.createNewCache(new LRUCacheConfiguration("xwiki.store.pageexistcache",
-                    pageExistCacheCapacity));
-            setPageExistCache(pageExistcache);
+            int pageExistCacheCapacity =
+                (int) context.getWiki().ParamAsLong("xwiki.store.cache.pageexistcapacity", 10000);
+            this.pageExistCache = cacheManager
+                .createNewCache(new LRUCacheConfiguration("xwiki.store.pageexistcache", pageExistCacheCapacity));
         } catch (CacheException e) {
             throw new XWikiException(XWikiException.MODULE_XWIKI_CACHE, XWikiException.ERROR_CACHE_INITIALIZING,
                 "Failed to initialize cache", e);
         }
+    }
+
+    @Deprecated
+    @Override
+    public void initCache(int capacity, int pageExistCacheCapacity, XWikiContext context) throws XWikiException
+    {
+        // Do nothing
     }
 
     @Override
@@ -163,14 +148,13 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
     @Override
     public void saveXWikiDoc(XWikiDocument doc, XWikiContext context, boolean bTransaction) throws XWikiException
     {
-        String key = doc.getKey();
         this.store.saveXWikiDoc(doc, context, bTransaction);
+
         doc.setStore(this.store);
-        // Make sure cache is initialized
-        initCache(context);
 
         // We need to flush so that caches
         // on the cluster are informed about the change
+        String key = getKey(doc, context);
         getCache().remove(key);
         getPageExistCache().remove(key);
 
@@ -185,15 +169,8 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
     @Override
     public void flushCache()
     {
-        if (this.cache != null) {
-            this.cache.dispose();
-            this.cache = null;
-        }
-
-        if (this.pageExistCache != null) {
-            this.pageExistCache.dispose();
-            this.pageExistCache = null;
-        }
+        getCache().removeAll();
+        getPageExistCache().removeAll();
     }
 
     @Override
@@ -218,52 +195,57 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
         }
     }
 
+    /**
+     * @deprecated since 4.0M1, use {@link com.xpn.xwiki.doc.XWikiDocument#getKey()}
+     */
     @Deprecated
     public String getKey(XWikiDocument doc)
     {
         return doc.getKey();
     }
 
-    /**
-     * @deprecated since 4.0M1 use {@link com.xpn.xwiki.doc.XWikiDocument#getKey()}
-     */
-    @Deprecated
     public String getKey(XWikiDocument doc, XWikiContext context)
     {
-        return doc.getKey();
+        DocumentReference reference = doc.getDocumentReferenceWithLocale();
+
+        // The current wiki might be different from the reference wiki so fix it before calculating the key
+        if (!reference.getWikiReference().equals(context.getWikiReference())) {
+            reference = reference.setWikiReference(context.getWikiReference());
+        }
+
+        // Calculate the cache key
+        return this.uidStringEntityReferenceSerializer.serialize(reference, reference);
     }
 
     /**
-     * @deprecated since 4.0M1 use {@link com.xpn.xwiki.doc.XWikiDocument#getKey()}
+     * @deprecated since 4.0M1, use {@link com.xpn.xwiki.doc.XWikiDocument#getKey()}
      */
     @Deprecated
     public String getKey(String fullName, String language, XWikiContext context)
     {
         XWikiDocument doc = new XWikiDocument(null, fullName);
         doc.setLanguage(language);
-        return doc.getKey();
+
+        return getKey(doc, context);
     }
 
     /**
-     * @deprecated since 4.0M1 use {@link com.xpn.xwiki.doc.XWikiDocument#getKey()}
+     * @deprecated since 4.0M1, use {@link com.xpn.xwiki.doc.XWikiDocument#getKey()}
      */
     @Deprecated
     public String getKey(final String wiki, final String fullName, final String language)
     {
         XWikiDocument doc = new XWikiDocument(wiki, null, fullName);
         doc.setLanguage(language);
-        return doc.getKey();
+
+        return getKey(doc);
     }
 
     @Override
     public XWikiDocument loadXWikiDoc(XWikiDocument doc, XWikiContext context) throws XWikiException
     {
-        String key = doc.getKey();
-
-        LOGGER.debug("Cache: begin for doc {} in cache", key);
-
-        // Make sure cache is initialized
-        initCache(context);
+        // Calculate the cache key
+        String key = getKey(doc, context);
 
         LOGGER.debug("Cache: Trying to get doc {} from cache", key);
 
@@ -277,8 +259,7 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
         }
 
         if (cachedoc != null) {
-            doc = cachedoc;
-            doc.setFromCache(true);
+            cachedoc.setFromCache(true);
 
             LOGGER.debug("Cache: got doc {} from cache", key);
         } else {
@@ -287,29 +268,23 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
             if (result == Boolean.FALSE) {
                 LOGGER.debug("Cache: The document {} does not exist, return an empty one", key);
 
-                doc.setStore(this.store);
-                doc.setNew(true);
+                cachedoc = doc;
+                cachedoc.setNew(true);
 
                 // Make sure to always return a document with an original version, even for one that does not exist.
                 // Allow writing more generic code.
-                doc.setOriginalDocument(new XWikiDocument(doc.getDocumentReference(), doc.getLocale()));
+                cachedoc.setOriginalDocument(new XWikiDocument(cachedoc.getDocumentReference(), cachedoc.getLocale()));
             } else {
                 LOGGER.debug("Cache: Trying to get doc {} from persistent storage", key);
 
-                doc = this.store.loadXWikiDoc(doc, context);
-                doc.setStore(this.store);
-
-                // Recalculate the key in case it's not exactly the same as the one from the passed XWikiDocument
-                // TODO: ideally we modify store implementation to search in passed document wiki instead of context
-                // wiki
-                key = doc.getKey();
+                cachedoc = this.store.loadXWikiDoc(doc, context);
 
                 LOGGER.debug("Cache: Got doc {} from storage", key);
 
-                if (doc.isNew()) {
+                if (cachedoc.isNew()) {
                     getPageExistCache().set(key, Boolean.FALSE);
                 } else {
-                    getCache().set(key, doc);
+                    getCache().set(key, cachedoc);
 
                     // Also update exist cache
                     getPageExistCache().set(key, Boolean.TRUE);
@@ -317,22 +292,22 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
 
                 LOGGER.debug("Cache: put doc {} in cache", key);
             }
+
+            cachedoc.setStore(this.store);
         }
 
         LOGGER.debug("Cache: end for doc {} in cache", key);
 
-        return doc;
+        return cachedoc;
     }
 
     @Override
     public void deleteXWikiDoc(XWikiDocument doc, XWikiContext context) throws XWikiException
     {
-        String key = doc.getKey();
+        // Calculate the cache key
+        String key = getKey(doc, context);
 
         this.store.deleteXWikiDoc(doc, context);
-
-        // Make sure cache is initialized
-        initCache(context);
 
         getCache().remove(key);
         getPageExistCache().remove(key);
@@ -352,8 +327,7 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
     }
 
     @Override
-    public List<DocumentReference> searchDocumentReferences(String wheresql, XWikiContext context)
-        throws XWikiException
+    public List<DocumentReference> searchDocumentReferences(String wheresql, XWikiContext context) throws XWikiException
     {
         return this.store.searchDocumentReferences(wheresql, context);
     }
@@ -414,8 +388,8 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
     }
 
     @Override
-    public List<String> searchDocumentsNames(String parametrizedSqlClause, List<?> parameterValues, XWikiContext context)
-        throws XWikiException
+    public List<String> searchDocumentsNames(String parametrizedSqlClause, List<?> parameterValues,
+        XWikiContext context) throws XWikiException
     {
         return this.store.searchDocumentsNames(parametrizedSqlClause, parameterValues, context);
     }
@@ -563,8 +537,7 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
     }
 
     @Override
-    public List<String> loadBacklinks(String fullName, XWikiContext context, boolean bTransaction)
-        throws XWikiException
+    public List<String> loadBacklinks(String fullName, XWikiContext context, boolean bTransaction) throws XWikiException
     {
         return this.store.loadBacklinks(fullName, context, bTransaction);
     }
@@ -642,8 +615,9 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
     @Override
     public boolean exists(XWikiDocument doc, XWikiContext context) throws XWikiException
     {
-        String key = doc.getKey();
-        initCache(context);
+        // Calculate the cache key
+        String key = getKey(doc, context);
+
         try {
             Boolean result = getPageExistCache().get(key);
 
@@ -654,7 +628,7 @@ public class XWikiCacheStore implements XWikiCacheStoreInterface, EventListener
         }
 
         boolean result = this.store.exists(doc, context);
-        getPageExistCache().set(key, new Boolean(result));
+        getPageExistCache().set(key, Boolean.valueOf(result));
 
         return result;
     }
